--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,28 @@
     <link rel="shortcut icon" href=static/images/icon.png type=image/x-icon>
     <title>Document</title>
 </head>
-<body>
+
+<body onload="onLoad()">
     <div>hello world</div>
 </body>
+<script type="text/javascript">
+    function onLoad() {
+        let xhr = new XMLHttpRequest();
+
+        xhr.open("GET", "http://puui.qpic.cn/vcover_vt_pic/0/u8jsy6jckwt9sd11526442323/220", true);
+
+        xhr.send();
+
+        xhr.onreadystatechange = function () {
+            if (xhr.readyState === 4 && xhr.status === 200) {
+                console.log(xhr.response);
+            } else if (xhr.status === 404) {
+                console.log(404);
+            } else {
+                console.log(-1);
+            }
+        }
+    }
+</script>
+
 </html>
